# Agentic-RAG-Evaluation

./: .env.example  .gitignore  LICENSE  README.md  c1_rewrite_demo.py  crawl_knowledge_base_v3.py  current progress.md  demo.py  main.py  manual_eval_c0_c1_summary.md  pyproject.toml  rag_demo.py  references.csv  run_batch_experiments.py  run_c2_ablation_answer_accuracy.py  run_c2_retrieval_ablation.py  run_c34_batch_eval.py  run_rag.py  run_score_answer_accuracy.py  run_score_rag_multidim.py  upload_demo.py
configs/: active_session.example.yaml  c1_rewrite.yaml  c2_advanced.yaml  c3_agentic_retrieval.yaml  c4_tool_augmented.yaml  run_default.yaml
docs/: ARCHITECTURE.md  README.md  agent_runtime_architecture.md  batch_experiment_guide.md  c0_baseline_architecture.md  c2_ablation_guide.md  c2_stage3_selective_review_conclusion_2026-05-24.md  c2_three_layer_retrieval_report.md  c3_c4_ablation_conclusion.md  c3_c4_ablation_design.md  c3_formal_30_experiment_report.md  c3_formal_review_conclusion_2026-05-24.md  c3_lite_next_30_experiment_report.md  c3_lite_optimization_technical_report.md  c3_smoke_experiment_guide.md  collaboration_workflow.md  directory_rules.md  environment_and_git_rules.md  evaluation_ai_judge.md  evaluation_plan.md  experiment_notes.md  experiment_stage_and_code_ownership.md  failure_cases.md  interface_and_logging_rules.md  manual_eval_c0_c1_summary.md
frozen_experiment_versions/: README.md
prompts/: README.md  answer_judge_prompt.md  query_rewrite_prompt.md  rag_multidim_judge_prompt.md  self_check_prompt.md
tests/: test_active_session.py  (+45 more)
(+174 files in other folders)
